--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -29,6 +29,12 @@ Both the Apollo Router and Apollo Server use the same mechanism to enable operat
 
    <ObtainGraphApiKey />
 
+   <Note>
+
+   The graph API key you use must have at least the [**Contributor** role](../org/members#organization-wide-member-roles) to report metrics for a non-protected variant, and either an **Org Admin** or **Graph Admin** role to report metrics for a [protected variant](../graphs/management/#protected-variants-enterprise-only).
+
+   </Note>
+
 2. Obtain the _graph ref_ for the graph and variant you want to report metrics for. You can find your variant's graph ref at the top of the variant's README page in Studio. It has the format `graph-id@variant-name` (such as `my-graph@staging`).
 
 3. Use the obtained values to set the following environment variables in your environment before starting up your router/server:
