Update nav and notifications overview

--- a/src/content/graphos/metrics/notifications/index.mdx
+++ b/src/content/graphos/metrics/notifications/index.mdx
@@ -47,5 +47,5 @@ GraphOS can send notifications to the indicated channels:
 
 ### Release stage
 
-- Schema proposal and build status notifications are in [preview](/resources/product-launch-stages#preview).
+- Build status notifications are in [preview](/resources/product-launch-stages#preview).
 - Performance alerts are [experimental](/resources/product-launch-stages#experimental-features).
