--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -32,7 +32,7 @@ All plans have access to field usage insights for standard object fields.
 
 <br/>
 
-Organizations with an enterprise plan can view insights on input object fields and enum values in addition to object fields. To access these metrics you must use the Apollo Router to [report metrics](./sending-operation-metrics) and configure [extended reference reporting](/router/configuration/overview/#extended-reference-reporting) in your router.
+Organizations with an Enterprise plan can view insights on input object fields and enum values in addition to standard object fields. To access these metrics you must use the Apollo Router to [report metrics](./sending-operation-metrics) and configure [extended reference reporting](/router/configuration/overview/#extended-reference-reporting) in your router.
 
 </EnterpriseFeature>
 
