--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -205,7 +205,7 @@ You can **Undo** an override from the banner that appears on any overridden oper
 
 #### Ignored conditions settings
 
-You can update your check settings so checks don't flag the two following kinds of changes:
+You can update your check settings so operation checks don't flag the following kinds of changes:
 
 - **Ignore breaking changes when there are no operations**: Turning this setting on ignores any potentially breaking changes when an operation check is run against zero operations.
 - **Ignore default value changes**: Turning this setting on ignores any changes to default values.
