--- a/src/content/graphos/delivery/schema-proposals/creation.mdx
+++ b/src/content/graphos/delivery/schema-proposals/creation.mdx
@@ -50,6 +50,12 @@ Follow the steps below to create a new proposal:
 
 3. If you've started the proposal from a graph rather than a particular variant, select a **source variant**. The source variant's schema is used to start the proposal, but the proposal isn't kept in sync with any schema changes that occur while the proposal is in progress.
 
+   <Note>
+
+   It is not possible to create a proposal for a contract variant as these are automatically generated based on their source variant.
+
+   </Note>
+
    <Tip>
 
    **Apollo recommends creating schema proposals from development variants**.
