Clarification that proposals can't be created for contract variants (#892)
* Update creation.mdx

Added a note to clarify that it is not possible to create a proposal against a contract variant. This is not yet clear in the UI, but that's coming here https://apollographql.atlassian.net/browse/PROPOSALS-228

* Copyedit

---------

Co-authored-by: Maria Elisabeth Schreiber <maria.schreiber@apollographql.com>

--- a/src/content/graphos/delivery/schema-proposals/creation.mdx
+++ b/src/content/graphos/delivery/schema-proposals/creation.mdx
@@ -58,6 +58,12 @@ Follow the steps below to create a new proposal:
 
    </Tip>
 
+   <Note>
+
+   You can't create proposals for contract variants since these are automatically generated based on their source variant.
+
+   </Note>
+
 4. Optionally, enter the rationale for the proposed changes. This rationale appears as your proposal's **Description** on the proposal's overview and gives collaborators and reviewers context for the proposed changes. This input accepts Markdown.
 
     <Note>
