--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -123,11 +123,11 @@ Each row in the **Clients & Operations** table displays some combination of the 
 
 <Note>
 
-Execution metrics are only available for standard object fields, not input object fields or enum values.
+Execution metrics are only available for [standard object fields](#object-fields), not [input object fields or enum values](#input-fields-and-enum-values).
 
 </Note>
 
-For each of these columns to appear on the **Insights** page, your GraphQL servers must [report the associated metrics to GraphOS](./sending-operation-metrics#reporting-field-usage). If some but not all your GraphQL servers report this data, the Insights page presents an incomplete picture of your graph's field usage.
+For each of these columns to appear on the **Insights** page, your GraphQL servers must [report the associated metrics to GraphOS](./sending-operation-metrics#reporting-field-usage). If some but not all your GraphQL servers report this data, the **Insights** page presents an incomplete picture of your graph's field usage.
 
 Take a look at the **Requests** and **Executions** for an example field:
 
