--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -40,7 +40,7 @@ The collapsible left sidebar on the **Insights** page lets you filter field type
   width="300"
 />
 
-All organizations can view **object fields**, but only organization with an Enterprise plan can view usage metrics for **input fields** and **enum values**.
+All organizations can view **object fields**, but only organizations with an Enterprise plan can view usage metrics for **input fields** and **enum values**.
 
 
 ### Object fields
