Revert "Enhanced insights and checks (#890)"
This reverts commit c157bf999c5d622ede3c54f1fb9435b17935739a.

--- a/src/content/graphos/metrics/operation-signatures.mdx
+++ b/src/content/graphos/metrics/operation-signatures.mdx
@@ -76,7 +76,7 @@ Argument values provided as GraphQL variable names are preserved.
 
 <Note>
 
-Organizations using the Apollo Router can enable enhanced operation signature generation.
+Organizations using the GraphOS Router can enable enhanced operation signature generation.
 Enhanced operation signatures include the input object shapes, while still redacting actual values.
 See the [router configuration page](/router/configuration/overview#enhanced-operation-signature-normalization) to learn more.
 
@@ -116,7 +116,7 @@ All field aliases are removed. If an operation includes three instances of the s
 
 <Note>
 
-Organizations using the Apollo Router can enable enhanced operation signature generation that does not remove field aliases.
+Organizations using the GraphOS Router can enable enhanced operation signature generation that does not remove field aliases.
 See the [router configuration page](/router/configuration/overview#enhanced-operation-signature-normalization) to learn more.
 
 </Note>
