--- a/src/content/graphos/metrics/index.mdx
+++ b/src/content/graphos/metrics/index.mdx
@@ -28,6 +28,10 @@ The following require an [Enterprise plan](https://www.apollographql.com/pricing
 Reporting metrics from [Apollo Server](/apollo-server) or a [monograph](../graphs/#monographs)
 requires an [Enterprise or legacy Team plan](../org/plans).
 
+If your organization
+doesn't currently have an Enterprise plan, you can test out this functionality by
+signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
+
 </EnterpriseFeature>
 
 ## Insights and analysis
