--- a/src/content/graphos/delivery/check-configurations.mdx
+++ b/src/content/graphos/delivery/check-configurations.mdx
@@ -45,7 +45,7 @@ This command checks schema changes against the past two weeks of operations:
 rover subgraph check docs-example-graph@current --name products --schema ./schema.graphql --validation-period="2 weeks"
 ```
 
-Valid durations are represented as any combination of `years`, `months`, `weeks`, `days`, `min`, and `sec`:
+Valid durations are represented as any combination of `months`, `weeks`, `days`, `min`, and `sec`:
 
 - `1 month 2 weeks`
 - `525600 min`
