Update notif links

--- a/src/content/graphos/basics/quickstart/next-steps.mdx
+++ b/src/content/graphos/basics/quickstart/next-steps.mdx
@@ -151,7 +151,7 @@ For more information, see [Securing your subgraphs](/federation/building-supergr
 
 ### Configure notifications
 
-GraphOS can send you various types of notifications via a few different channels (including Slack and PagerDuty). These notifications can include a daily metrics report, schema change updates, and experimental performance alerts. [Set up notifications.](../metrics/notifications/notification-setup/)
+GraphOS can send you various types of notifications via a few different channels (including Slack and PagerDuty). These notifications can include a daily metrics report, schema change updates, and experimental performance alerts. [Set up notifications.](../metrics/notifications)
 
 ### Invite team members
 
