--- a/src/content/basics/resources/faq.mdx
+++ b/src/content/basics/resources/faq.mdx
@@ -181,7 +181,7 @@ Many apps and sites are powered almost completely by an API such as a GraphQL sc
 
 [GraphOS Studio](https://studio.apollographql.com) is a great tool to track many of these things. It allows close inspection of fields to make it easy to see both total response times as well as how long each field took to execute.
 
-GraphOS Studio also has some integrations to make monitoring easier. [Notifications](/graphos/metrics/notifications/) delivers daily reports to give teams a quick overview of the health of their schema. The enterprise [Datadog integration](/graphos/metrics/datadog-integration/) works with existing Datadog accounts to help teams track schema performance.
+GraphOS Studio also has some integrations to make monitoring easier. [Notifications](/graphos/metrics/notifications/) can deliver daily reports to give teams a quick overview of the health of their schema. The enterprise [Datadog integration](/graphos/metrics/datadog-integration/) works with existing Datadog accounts to help teams track schema performance.
 
 ## 4. Moving a product to GraphQL
 
