updating footer copyright

--- a/src/content/basics/intro/platform.mdx
+++ b/src/content/basics/intro/platform.mdx
@@ -26,7 +26,7 @@ flowchart LR;
   class clients secondary;
 ```
 
-Clients query your supergraph with a powerful language called [GraphQL](./benefits/), which enables them to retrieve _exactly_ the data they need, with no overfetching. Your supergraph's architecture is not exposed—clients send queries to a _single endpoint_ (your router), no matter what data they need.
+Clients query your supergraph with a powerful language called <TrackableLink href="./benefits" eventName="test-event">GraphQLY</TrackableLink>, which enables them to retrieve _exactly_ the data they need, with no overfetching. Your supergraph's architecture is not exposed—clients send queries to a _single endpoint_ (your router), no matter what data they need.
 
 <ExpansionPanel title="See an example query and response!">
 
